# linux-board-projects

./: .gitattributes  .gitignore  AGENTS.md  README.md
2.1.Linux网关/k7-gateway/: README.md  pyproject.toml
2.1.Linux网关/k7-gateway/docs/: LoRa_E22接线与UART选择.md  bringup.md  network-watchdog.md
2.1.Linux网关/k7-gateway/scripts/: install_systemd_service.sh
2.1.Linux网关/k7-gateway/src/k7_gateway/: __init__.py  board_check.py  config.py  downlink.py  e22.py  gateway.py  lora_protocol.py  main.py  mqtt_simple.py  network_status.py  network_watchdog.py  serial_posix.py
2.1.Linux网关/k7-gateway/systemd/: k7-gateway.service  k7-network-watchdog.service
2.1.Linux网关/k7-gateway/tests/: test_downlink.py  test_gateway.py  test_lora_protocol.py  test_mqtt_simple.py  test_network_status.py  test_network_watchdog.py
docs/: INTERFACE_SPEC.md  build.md  debug.md  flash.md  k7-lora-wifi-mqtt-verify.md  reproduce.md  setup.md
scripts/: build.sh  check_env.sh  flash.sh  run_test.sh
